<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/line_background"
        android:orientation="horizontal"
        android:padding="@dimen/line_padding" >

        <TextView
            android:id="@+id/txtService"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/service_state" />

        <ToggleButton
            android:id="@+id/tbtnService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/service_state_stop"
            android:textOn="@string/service_state_start" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/line_background"
        android:orientation="horizontal"
        android:padding="@dimen/line_padding" >

        <TextView
            android:id="@+id/txtBluetooth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/bluetooth_state" />

        <ToggleButton
            android:id="@+id/tbtnBluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/bluetooth_state_stop"
            android:textOn="@string/bluetooth_state_start" />
    </LinearLayout>

</LinearLayout>
